# google-drive-mcp-server

./: CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
google_drive_mcp_server/: __init__.py  __main__.py  drive_client.py  server.py
openspec/changes/archive/2026-03-07-google-drive-mcp-server/: design.md  proposal.md
openspec/changes/archive/2026-03-07-google-drive-mcp-server/specs/server-transport/: spec.md
openspec/changes/archive/2026-03-19-fix-root-level-path-resolution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-fix-root-level-path-resolution/specs/file-operations/: spec.md
openspec/changes/google-drive-mcp-server/: tasks.md
openspec/changes/google-drive-mcp-server/specs/file-operations/: spec.md
openspec/specs/file-operations/: spec.md
openspec/specs/server-transport/: spec.md
tests/: test_auth.py  test_drive_client.py  test_file_operations.py  test_health.py
